Add template haskell generation for integers

--- a/type-numbers.cabal
+++ b/type-numbers.cabal
@@ -17,3 +17,4 @@ Library
                    Types.Number.Int
                    Types.Boolean
   Other-modules:   Types.Number.Nat.Types
+                   Types.Number.Int.Types
