--- a/type-numbers.cabal
+++ b/type-numbers.cabal
@@ -1,15 +1,24 @@
-Name:		type-numbers
-Version:	0.1
+Name:           type-numbers
+Version:        0.1
 Cabal-Version:  >= 1.2
-License:	BSD3
-License-File:	LICENSE
-Author:		Alexey Khudyakov <alexey.skladnoy@gmail.com>
-Homepage:	
-Category:	Type System
+License:        BSD3
+License-File:   LICENSE
+Author:         Alexey Khudyakov <alexey.skladnoy@gmail.com>
+Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
+Homepage:       
+Category:       Type System
 Build-Type:     Simple
-Synopsis:	
+Synopsis:       
   Type level numbers (natural and signed integeger) implemented using
   type families.
+Description:
+  This is type level numbers implemented using type families. Natural
+  numbers use binary encoding. With default context stack numbers up
+  to 2^18-1 coudl be represented. Integer numbers use balanced ternary
+  encoding.
+
+  So far comparison of numbers, subtraction and multiplication of
+  numbers are supported.
   
 Library
   Build-Depends:   base,
