Move cdr to utils module

--- a/type-numbers.cabal
+++ b/type-numbers.cabal
@@ -29,3 +29,4 @@ Library
                    Types.Boolean
   Other-modules:   Types.Number.Nat.Types
                    Types.Number.Int.Types
+                   Types.Util
