--- a/type-level-numbers.cabal
+++ b/type-level-numbers.cabal
@@ -53,6 +53,7 @@ source-repository head
 
 
 Library
+  ghc-options:     -Wall -fno-warn-orphans
   Build-Depends:   base >=3 && <5,
                    template-haskell > 2.0
   Exposed-modules: TypeLevel.Number.Classes
