--- a/type-level-numbers.cabal
+++ b/type-level-numbers.cabal
@@ -24,7 +24,7 @@ Description:
   .
   Changes in 0.1.1.0
   .
-  * @withNat@, @withInt@, @SomeNat and @SomeInt@ added.
+  * withNat, withInt, SomeNat and SomeInt added.
   .
   Changes in 0.1.0.3
   .
