Add ChangeLog to cabal file

--- a/type-level-numbers.cabal
+++ b/type-level-numbers.cabal
@@ -31,6 +31,8 @@ Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
 Homepage:       
 Category:       Type System
 Build-Type:     Simple
+extra-source-files:
+  ChangeLog
 
 source-repository head
   type:     hg
